--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
+    <title>E9X M3 Inventory</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -49,7 +49,7 @@
     <div class="grid-wrapper">
         <div class="grid-inner">
 
-            <!-- COLUMN LABELS (A) -->
+            <!-- COLUMN LABELS -->
             <div class="column-labels">
                 <div class="header-cell header-status">Cat.</div>
                 <div class="header-cell header-checkbox"></div>
@@ -76,36 +76,36 @@
                 </div>
             </div>
 
-            <!-- FILTER INPUT ROW (B) -->
+            <!-- FILTER INPUT ROW -->
             <div class="table-header">
                 <div class="header-cell header-status"></div>
                 <div class="header-cell header-checkbox"></div>
                 <div class="header-cell header-marketing">
-                    <input class="filter-input" data-field="marketing" placeholder="">
+                    <input class="filter-input" data-field="marketing">
                 </div>
                 <div class="header-cell header-model">
-                    <input class="filter-input" data-field="model" placeholder="">
+                    <input class="filter-input" data-field="model">
                 </div>
                 <div class="header-cell header-color">
-                    <input class="filter-input" data-field="color" placeholder="">
+                    <input class="filter-input" data-field="color">
                 </div>
                 <div class="header-cell header-interior">
-                    <input class="filter-input" data-field="interior" placeholder="">
+                    <input class="filter-input" data-field="interior">
                 </div>
                 <div class="header-cell header-year">
-                    <input class="filter-input" data-field="year" placeholder="">
+                    <input class="filter-input" data-field="year">
                 </div>
                 <div class="header-cell header-vin">
-                    <input class="filter-input" data-field="vin" placeholder="">
+                    <input class="filter-input" data-field="vin">
                 </div>
                 <div class="header-cell header-packages">
-                    <input class="filter-input" data-field="packages" placeholder="">
+                    <input class="filter-input" data-field="packages">
                 </div>
                 <div class="header-cell header-price">
-                    <input class="filter-input" data-field="price" placeholder="">
+                    <input class="filter-input" data-field="price">
                 </div>
                 <div class="header-cell header-dealer">
-                    <input class="filter-input" data-field="dealer" placeholder="">
+                    <input class="filter-input" data-field="dealer">
                 </div>
             </div>
 
